--- a/Makefile.am
+++ b/Makefile.am
@@ -12,6 +12,9 @@ CLEANFILES =
 DEFAULT_INCLUDES =
 
 SUBDIRS = . tessdata
+if MINGW
+SUBDIRS += nsis
+endif
 
 EXTRA_DIST = README.md LICENSE
 EXTRA_DIST += aclocal.m4 config configure.ac autogen.sh
@@ -54,6 +57,11 @@ doc-pack: doc
 
 doc-clean:
 	rm -rf $(top_builddir)/doc/html/*
+
+if MINGW
+winsetup: training ScrollView.jar
+	@cd "$(top_builddir)/nsis" && $(MAKE) winsetup
+endif
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = tesseract.pc
